@@ -53,12 +53,14 @@ dependencies {
     testImplementation(libs.protobufLite)
     testImplementation(libs.guavaAndroid)
     testImplementation(project(":compose:compiler:compiler-hosted"))
+    testImplementation(projectOrArtifact(":compose:foundation:foundation"))
     testImplementation(projectOrArtifact(":compose:material:material"))
     testImplementation(project(":compose:runtime:runtime"))
     testImplementation(projectOrArtifact(":compose:ui:ui"))
     testImplementation("androidx.core:core-ktx:1.1.0")
     testImplementation("androidx.activity:activity-ktx:1.2.0")
     testImplementation("org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3.4")
+    testImplementation("com.google.dagger:dagger:2.40.1")
 }
 
 afterEvaluate {
@@ -66,6 +68,7 @@ afterEvaluate {
         t.dependsOn(":compose:compiler:compiler:embeddedPlugin")
 
         maxHeapSize("1024m")
+        t.jvmArgs += ["--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED"]
     }
 }
 
@@ -77,12 +80,6 @@ android {
         disable("SyntheticAccessor")
     }
     namespace "androidx.compose.runtime.tests"
-}
-
-tasks.withType(KotlinCompile).configureEach {
-    kotlinOptions {
-        freeCompilerArgs += ["-opt-in=kotlin.RequiresOptIn"]
-    }
 }
 
 androidx {
