@@ -23,6 +23,8 @@ plugins {
     id("kotlin")
 }
 
+androidx.configureAarAsJarForConfiguration("testImplementation")
+
 dependencies {
     implementation(libs.xpp3)
     implementation(libs.xmlpull)
@@ -33,26 +35,15 @@ dependencies {
 
     testImplementation(libs.junit)
     testImplementation(libs.googleCompileTesting)
+    testImplementation(projectOrArtifact(":room:room-compiler-processing-testing"), {
+        exclude group: "androidx.room", module: "room-compiler-processing"
+    })
     testImplementation(fileTree(
             dir: "${SdkHelperKt.getSdkPath(project)}/platforms/$SupportConfig.COMPILE_SDK_VERSION/",
             include : "android.jar"
     ))
-    testImplementation(fileTree(
-            dir: provider {
-                // Wrapping in a provider as a workaround as we access buildDir before this project is configured
-                // Replace with AGP API once it is added b/228109260
-                "${new File(project(":navigation:navigation-common").buildDir, "libJar")}"
-            },
-            include : "*.jar"
-    ))
-    testImplementation(fileTree(
-            dir: provider {
-                // Wrapping in a provider as a workaround as we access buildDir before this project is configured
-                // Replace with AGP API once it is added b/228109260
-                "${new File(project(":lifecycle:lifecycle-viewmodel-savedstate").buildDir, "libJar")}"
-            },
-            include : "*.jar"
-    ))
+    testImplementationAarAsJar(project(":navigation:navigation-common"))
+    testImplementationAarAsJar(project(":lifecycle:lifecycle-viewmodel-savedstate"))
 }
 
 tasks.findByName("test").doFirst {
@@ -62,14 +53,15 @@ tasks.findByName("test").doFirst {
     def androidJar = classpath.find { it.name == "android.jar" }
     it.classpath = files(classpath.minus(androidJar).plus(androidJar))
 }
+tasks.withType(Test).configureEach {
+    // https://github.com/google/compile-testing/issues/222
+    it.jvmArgs "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+}
 
-tasks.findByName("compileKotlin").dependsOn(":navigation:navigation-common:jarRelease")
-tasks.findByName("compileKotlin").dependsOn(":lifecycle:lifecycle-viewmodel-savedstate:jarRelease")
 
 androidx {
     name = "Android Navigation TypeSafe Arguments Generator"
     type = LibraryType.OTHER_CODE_PROCESSOR
-    mavenGroup = LibraryGroups.NAVIGATION
     inceptionYear = "2017"
     description = "Android Navigation TypeSafe Arguments Generator"
 }
